--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
-<IfModule authz_core_module>
-
-</IfModule>
+RewriteEngine on
+RewriteCond $1 !^(index\.php|files|style|uploadify|phpmyadmin)
+RewriteRule ^(.*)$ /index.php/$1 [L]
